objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Foam</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Pharmaceutical Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Refrigerants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Vertrel</fullName>
                </value>
                <value>
                    <fullName>DCF FPS</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-AFFF</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Catalyst</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Chemoswed</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Coatings &amp; Releases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization_Code__c</fullName>
        <description>ERP (Enterprise Resource Planning) (Financial Reporting Business) Code</description>
        <label>Owning Organization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Cardboard Box</fullName>
                </value>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Canister</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                </value>
                <value>
                    <fullName>Crate</fullName>
                </value>
                <value>
                    <fullName>Drum</fullName>
                </value>
                <value>
                    <fullName>Jar</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Pail</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Tote</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_list_type__c</fullName>
        <label>Price list type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductList_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCP</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DEC-PG</fullName>
                </value>
                <value>
                    <fullName>DNH</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>DTT</fullName>
                </value>
                <value>
                    <fullName>DuPont Industrial Coatings</fullName>
                </value>
                <value>
                    <fullName>DuPont Refinish</fullName>
                </value>
                <value>
                    <fullName>N&amp;H</fullName>
                </value>
                <value>
                    <fullName>Nason</fullName>
                </value>
                <value>
                    <fullName>Oxoid-Qualicon</fullName>
                </value>
                <value>
                    <fullName>PG Service</fullName>
                </value>
                <value>
                    <fullName>PHB</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Qualicon Support</fullName>
                </value>
                <value>
                    <fullName>Spies Hecker</fullName>
                </value>
                <value>
                    <fullName>Standox</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <description>Name of the concatenation of the 9 Product Hierarchy Levels, does not exist in SAP</description>
        <label>Product Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_1__c</fullName>
        <label>Product Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS-Cerenol</fullName>
                </value>
                <value>
                    <fullName>ABS-Sorona</fullName>
                </value>
                <value>
                    <fullName>ABS-Tate &amp; Lyle</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Chemicals &amp; Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Foam</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Pharmaceutical Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Refrigerants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Vertrel</fullName>
                </value>
                <value>
                    <fullName>DCF FPS</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-AFFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Level_2__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPC</fullName>
                    <default>true</default>
                    <label>CPC</label>
                </value>
                <value>
                    <fullName>CPC Prof Products</fullName>
                </value>
                <value>
                    <fullName>Agsurf</fullName>
                </value>
                <value>
                    <fullName>Entek</fullName>
                </value>
                <value>
                    <fullName>Griffin</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>REF JEDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Return Material Authorization required: always return this part for analysis when faulty or replaced for any reason.</description>
        <inlineHelpText>Always return this part for analysis when faulty or replaced for any reason.</inlineHelpText>
        <label>RMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Price_LC__c</fullName>
        <description>The current standard price for this material in local currency.</description>
        <label>Standard Price LC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Price_PY_LC__c</fullName>
        <label>Standard Price PY LC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Substance</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sys_Id__c</fullName>
        <label>Sys Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UMO__c</fullName>
        <label>UMO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square inch</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>Hectare</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_to__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ERP_Material_Code__c</columns>
        <columns>Sys_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with SysId</label>
    </listViews>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <recordTypes>
        <fullName>ERP_Material_Extended_Data</fullName>
        <active>true</active>
        <description>ERP Material – Extended Data (Sales Area)</description>
        <label>ERP Material - Extended Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Material_General_Data</fullName>
        <active>true</active>
        <description>ERP Material – General Data</description>
        <label>ERP Material - General Data</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>